added base repo, base service
