# internal/user/API.go
@@ -2,8 +2,11 @@ package user
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/leonardocartaxo/expenses-analyzer/internal/shared"
 	"log/slog"
 	"net/http"
+	"strconv"
+	"strings"
 )
 
 type API struct {
@@ -25,13 +28,13 @@ func NewApi(service *Service, l *slog.Logger) *API {
 // @Success      201  {object}  DTO
 // @Failure      500
 // @Router       /users [post]
-func (a *API) Save(c *gin.Context) {
+func (a *API) Create(c *gin.Context) {
 	createDTO := &CreateDTO{}
 	err := c.ShouldBindJSON(createDTO)
 	if err != nil {
 		c.Status(http.StatusInternalServerError)
 	}
-	newUser, err := a.service.Save(createDTO)
+	newUser, err := a.service.Create(createDTO)
 	if err != nil {
 		c.Status(http.StatusInternalServerError)
 	}
@@ -51,9 +54,9 @@ func (a *API) Save(c *gin.Context) {
 // @Failure      404
 // @Failure      500
 // @Router       /users/{id} [get]
-func (a *API) FindOne(c *gin.Context) {
+func (a *API) FindById(c *gin.Context) {
 	id := c.Param("id")
-	user, err := a.service.FindOne(id)
+	user, err := a.service.GetById(id)
 	if err != nil {
 		c.Status(http.StatusNotFound)
 	}
@@ -74,14 +77,14 @@ func (a *API) FindOne(c *gin.Context) {
 // @Failure      404
 // @Failure      500
 // @Router       /users/{id} [post]
-func (a *API) UpdateOne(c *gin.Context) {
+func (a *API) UpdateById(c *gin.Context) {
 	id := c.Param("id")
 	updateDTO := &UpdateDTO{}
 	err := c.ShouldBindJSON(updateDTO)
 	if err != nil {
 		c.Status(http.StatusInternalServerError)
 	}
-	user, err := a.service.UpdateOne(id, updateDTO)
+	user, err := a.service.Update(id, updateDTO)
 	if err != nil {
 		c.Status(http.StatusInternalServerError)
 	}
@@ -95,17 +98,57 @@ func (a *API) UpdateOne(c *gin.Context) {
 // @Accept       json
 // @Produce      json
 // @Param        name   query      string  false  "User name"
+// @Param        email   query      string  false  "User email"
 // @Param        start   query      string  false  "User createdAt start date"
 // @Param        end   query      string  false  "User createdAt end date"
+// @Param        populate   query      string  false  "User populate properties"
+// @Param        limit   query      int  false  "User pagination limit"
+// @Param        offset   query      int  false  "User pagination limit"
 // @Success      200  {object}  []DTO
 // @Failure      400
 // @Failure      500
 // @Router       /users [get]
 func (a *API) Find(c *gin.Context) {
 	name := c.Query("name")
-	start := c.Param("start")
-	end := c.Param("end")
-	dtos, err := a.service.Find(FindOptions{Name: name, Start: start, End: end})
+	email := c.Query("email")
+	start := c.Query("start")
+	end := c.Query("end")
+	limitStr := c.Query("limit")
+	offsetStr := c.Query("offset")
+	populateFieldsStr := c.Query("populateFields")
+
+	// Query options
+	var conditions []shared.BaseFindCondition
+	if name != "" {
+		conditions = append(conditions, shared.BaseFindCondition{Field: "name", Comparator: "=", Value: name})
+	}
+	if email != "" {
+		conditions = append(conditions, shared.BaseFindCondition{Field: "email", Comparator: "=", Value: email})
+	}
+	if start != "" {
+		conditions = append(conditions, shared.BaseFindCondition{Field: "created_at", Comparator: ">=", Value: start})
+	}
+	if end != "" {
+		conditions = append(conditions, shared.BaseFindCondition{Field: "created_at", Comparator: "<=", Value: end})
+	}
+
+	var populateFields []string
+	if populateFieldsStr != "" {
+		populateFields = strings.Split(populateFieldsStr, ",")
+	}
+
+	limit := 10
+	if limitStr != "" {
+		limit, _ = strconv.Atoi(limitStr)
+	}
+	offset := 0
+	if limitStr != "" {
+		offset, _ = strconv.Atoi(offsetStr)
+	}
+
+	orderBy := "created_at desc"
+
+	dtos, err := a.service.Find(conditions, populateFields, orderBy, limit, offset)
 	if err != nil {
 		c.Status(http.StatusInternalServerError)
 	}
